# aiomodels

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  pyproject.toml
src/aiomodels/chat_completion_events/: __init__.py  chat_completion_event.py  chat_completion_event_dispatcher.py  chat_completion_event_factory.py  chat_completion_event_handler.py  chat_completion_event_iterator.py  content_delta_event.py  content_finish_event.py  content_start_event.py  finish_event.py  message_finish_event.py  message_start_event.py  message_usage_event.py  start_event.py  to_chat_completion.py  tool_call_delta_event.py  tool_call_event.py  tool_call_finish_event.py  tool_call_start_event.py  usage_event.py
src/aiomodels/chat_completions/: __init__.py  chat_completion.py
src/aiomodels/cli/: chat.py
src/aiomodels/contents/: __init__.py  audio_content.py  document_content.py  image_content.py  json_content.py  refusal_content.py  text_content.py
src/aiomodels/exceptions/: __init__.py  llm_error.py
src/aiomodels/json_schema/: __init__.py  array.py  boolean.py  enum.py  integer.py  json_schema.py  json_schema_builder.py  number.py  object.py  property.py  string.py  type.py
src/aiomodels/messages/: __init__.py  assistant_message.py  message.py  system_message.py  tool_message.py  user_message.py
src/aiomodels/models/: __init__.py  model.py  model_price.py
src/aiomodels/parameters/: __init__.py  parameters.py
src/aiomodels/providers/: __init__.py  provider.py
src/aiomodels/response_formats/: __init__.py  response_format.py  (+3 more)
src/examples/: anthropic_chat_completion.py  anthropic_chat_completion_stream.py  bedrock_chat_completion.py  bedrock_chat_completion_stream.py  bedrock_image.py  openai_audio.py  openai_chat_completion.py  openai_chat_completion_stream.py  openai_image.py  openai_image_json_schema.py  openrouter_image.py
tests/: conftest.py
tests/bedrock/: test_bedrock_provider.py  test_to_chat_completion.py
tests/llm/: test_chat_completion.py  test_chat_completion_events.py  test_contents.py  test_messages.py  test_model.py  test_parameters.py  test_response_formats.py  test_to_chat_completion.py  test_tools.py
tests/openai/: create_chat_completion_response.py  object_mothers.py  test_openai_chat_completion.py  test_openai_chat_completion_stream.py
(+72 files in other folders)
